pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__068-atx_headings.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/068-atx_headings.md
---
[1m[34m┄┄┄[0m[1m[34mfoo[0m

[1m[34m┄┄[0m[1m[34mfoo[0m

[1m[34m┄[0m[1m[34mfoo[0m
